--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -32,8 +32,14 @@
             [disabled]="!f.valid">
             {{ editMode ? 'Update' : 'Add'}}
           </button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button 
+          <button
+            *ngIf="editMode" 
+            class="btn btn-danger" 
+            type="button"
+            (click)="onDelete()">
+            Delete
+          </button>
+          <button
             class="btn btn-primary" 
             type="button"
             (click)="onClear()">
