--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
           <button type="submit" class="btn btn-success">Save</button>
@@ -14,14 +14,16 @@
             <input 
               type="text" 
               class="form-control" 
-              id="name">
+              id="name"
+              formControlName="name">
           </div>
           <div class="form-group">
             <label for="imagePath">Image URL</label>
             <input 
               type="text" 
               class="form-control" 
-              id="imagePath">
+              id="imagePath"
+              formControlName="imagePath">
           </div>
           <div class="form-group">
             <label for="description">Description</label>
@@ -29,7 +31,8 @@
               type="text" 
               class="form-control" 
               id="description"
-              rows="6">
+              rows="6"
+              formControlName="description">
             </textarea>
           </div>
         </div>
