--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -42,7 +42,8 @@
           <div 
             class="row"
             *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index"
-            [formGroupName]="i">
+            [formGroupName]="i"
+            style="margin-top: 10px">
             <div class="col-xs-8">
               <input 
                 type="text" 
@@ -57,6 +58,12 @@
             </div>
             <div class="col-xs-2">
               <button class="btn btn-danger">X</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-xs-12">
+              <button (click)="onAddIngredient()" type="button" class="btn btn-success">Add Ingredient</button>
             </div>
           </div>
         </div>
