--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -76,13 +76,23 @@
                 formControlName="amount">
             </div>
             <div class="col-xs-2">
-              <button class="btn btn-danger">X</button>
+              <button 
+                (click)="onDeleteIngredient(i)" 
+                type="button" 
+                class="btn btn-danger">
+                X
+              </button>
             </div>
           </div>
           <hr>
           <div class="row">
             <div class="col-xs-12">
-              <button (click)="onAddIngredient()" type="button" class="btn btn-success">Add Ingredient</button>
+              <button 
+                (click)="onAddIngredient()" 
+                type="button" 
+                class="btn btn-success">
+                Add Ingredient
+              </button>
             </div>
           </div>
         </div>
