--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,6 +18,7 @@
           </li>
         </ng-template>
 
+        <li *ngIf="authService.isAuthenthicated()"><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
         <li class="dropdown" appDropdown *ngIf="authService.isAuthenthicated()">
           <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
           <ul class="dropdown-menu">
