--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,7 +9,7 @@
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <ng-template [ngIf]="!authService.isAuthenthicated()">
+        <ng-template [ngIf]="!(authState | async).authenticated">
           <li>
             <a routerLink="/signup">Register</a>
           </li>
@@ -18,8 +18,8 @@
           </li>
         </ng-template>
 
-        <li *ngIf="authService.isAuthenthicated()"><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
-        <li class="dropdown" appDropdown *ngIf="authService.isAuthenthicated()">
+        <li *ngIf="(authState | async).authenticated"><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
+        <li class="dropdown" appDropdown *ngIf="(authState | async).authenticated">
           <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a style="cursor: pointer;" (click)="onSaveData()">Save Data</a></li>
